client/scss/style.scss
body {
  background: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,.5) ),
  url('/images/background.jpg');
}

.heading {
  height: 65px;
  width: 100%;
  font-family: 'Overlock SC', cursive;
  color: rgba(255, 255, 255, 0.75);

  .order {
    font-family: 'Delius', cursive;
    font-size: 60px;
    float: left;
    clear: none;
    position: absolute;
    top: 0;
    bottom: 40%;
    margin-top: 5px;
  }

  .title {
    font-size: 30px;
    float: right;
    clear: none;
    position: relative;
    right: 3px;
    top: 34px;
    opacity: 1;
    transform: translateX(0px);
    display: block;
  }
}

#main-container {
  overflow: hidden;
}

.hexagram {
  width: 100%;
  margin: 0 auto;

  .line {
    height: 30px;
    margin: 20px 0;
    overflow: hidden;
  }

  .left {
    background-color: rgba(255, 255, 255, 0.75);
    position: absolute;
    height: 28px;
    left: 0;
    right: 50%;
  }

  .right {
    background-color: rgba(255, 255, 255, 0.75);
    position: absolute;
    height: 28px;
    left: 50%;
    right: 0;
  }

}

#breathe {
  position: absolute;
  top: 0;
  bottom: 30px;
  left: 0;
  right: 0;
  background-color: #000000;

  #ball {
    margin: 0 auto;
    height: 25px;
    width: 25px;
    border-radius: 12px;
    background-color: red;
  }
}


#breathe-buttons {
  position: absolute;
  height: 30px;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: gray;
  
  #rate {
    float: right;
    font-size: 22px;
    color: #FFFFFF;
    padding-right: 5px;
  }
}

#arrows {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 5px;
  width: 100%;

  #flip, #study {
    margin-left: 25px;
  }
}

.glyph-arrows {
  color: rgba(255, 255, 255, 0.75);
  font-size: 25px;
}

.flip-container {
  perspective: 1000;
  margin-top: 5px;
}

.flipper {
  transform-style: preserve-3d;
}

.flip-container, .front, .back {
  overflow: hidden;
  width: 100%;
  height: 83vh;
  backface-visibility: hidden;
}

/* hide back of pane during swap */
.front, .back {
  position: absolute;
  top: 0;
  left: 0;
  text-align: center;
}

/* front pane, placed above back */
.front {
  z-index: 2;
}

/* back, initially hidden pane */
.back {
  transform: rotateY(180deg);
}

